--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,24 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family: "FontAwesome";
+  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot#iefix&v=4.7.0")
+      format("embedded-opentype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0")
+      format("woff2"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0")
+      format("woff"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0")
+      format("truetype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular")
+      format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* ===HEADER=== */
 html,
 body {
@@ -16,24 +34,24 @@ header {
   background-size: cover;
   width: 100%;
   box-shadow: inset 0px 0px 145px 6px rgba(0, 0, 0, 0.85);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.header {
+.header-container {
   width: 90%;
   margin: auto;
-  height: 800px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
+  flex: 1;
 }
 .header-top {
   display: flex;
   flex-wrap: wrap;
-}
-
-.toggle ul li:hover {
-  color: #ffcd03;
 }
 
 .toggle {
@@ -43,8 +61,20 @@ header {
   color: #fff;
   font-size: 30px;
 }
+
+.toggle:hover{
+  background-color:#243e86;
+}
+
+
+.toggle ul li:hover {
+  color:white;
+  background: #ffcd03;
+}
+
 .toggle label {
   display: none;
+ 
 }
 .toggle ul li {
   display: inline-block;
@@ -70,7 +100,7 @@ header {
 
 .donate-btn {
   display: inline-block;
-  margin-right: 60px;
+  margin-right: 100px;
 }
 
 .donate-link {
@@ -157,38 +187,40 @@ header {
 }
 
 .bottom-container {
+  flex: 1;
   display: flex;
-  flex-direction: row;  
+  flex-direction: row;
   justify-content: flex-end;
   width: 100%;
 }
 
 .header-title {
-  width: 50%;
-  margin-left:200px;
-  margin-top: -30px;
-
-/*   margin-bottom: -200px; */
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 .bottom-title {
   font-size: 90px;
   color: white;
-  
-
 }
 
 .bg-box-right {
   width: 50%;
-  
-/*   background-color: black; */
+
+  /*   background-color: black; */
   z-index: 3;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .text-box {
   text-align: center;
   width: 60%;
-  margin: 600px auto;
+  margin: 60px auto;
   padding-top: 70px;
   padding-bottom: 70px;
 }
@@ -197,24 +229,19 @@ header {
   font-size: 60px;
   color: #243e86;
 }
+
 .video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden;
-  margin-right: 100px;
-  margin-left: 100px;
+  margin: auto;
+
+  width: 80vw;
+  height: 46vw;
 }
 
-.video-container iframe,
-.video-container object,
-.video-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 60%;
-  height: 60%;
+.video-container iframe {
+  /* margin-left: 40%; */
+  width: 100%;
+  height: 100%;
+  margin: auto;
 }
 
 .link-wrapper {
@@ -223,13 +250,42 @@ header {
 
 .bg-bottom {
   background: black;
-  padding-bottom: 1rem;
+  padding-bottom: 5rem;
+  padding-top: 1rem;
+
+  padding-left: 1.5rem;
   position: relative;
-  z-index: 1;
+  z-index: -1;
+}
+.bg-bottom :hover {
+  color: #ffcd03;
+}
+
+.bg-bottom::after {
+  content: " ";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  margin: 0px 0px 0px 10px;
+  text-decoration: none;
+  height: 0;
+  border-bottom: 80px solid#0492C0;
+  border-left: 100px solid transparent;
+  position: absolute;
+  right: 0;
 }
 
 .bg-wrapper {
   color: #ffffff;
+}
+.fa-arrow-right {
+  position: absolute;
+  right: 0;
+  z-index: 1;
+  float: center;
+  margin-top: 50px;
+  margin-right: 30px;
+  color: black;
 }
 
 .bg-big {
@@ -286,7 +342,7 @@ header {
   }
 
   .header-title {
-    margin-bottom: -70px;
+    margin-bottom: 70px;
   }
 }
 
@@ -296,26 +352,20 @@ header {
   }
 
   .header-title {
-    margin-bottom: -60px;
+    margin-bottom: 60px;
   }
-}
 
-@media screen and (max-width: 992px) {
-  .bottom-title {
-    font-size: 50px;
+  .video-container {
+    height: 200px;
   }
-}
-
-.header-title {
-  margin-bottom: -50px;
-}
-
-@media screen and (max-width: 800px) {
 }
 
 @media screen and (max-width: 768px) {
+  .header-top,
+  header li {
+  }
   .toggle label {
-    display: inline-block;
+    display: block;
   }
   .toggle ul {
     display: none;
@@ -326,12 +376,9 @@ header {
 
   .toggle {
     font-size: 55px;
-  
   }
 
   .toggle ul li {
     font-size: 20px;
   }
 }
-
-
