--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,750 @@ header {
 
 /* ===FOOTER=== */
 
+/* ===GENERAL=== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 18px;
+}
+
+.container {
+  max-width: 1100px;
+  margin: auto;
+}
+
+/* ===HEADER=== */
+
+/* ===MAIN=== */
+
+.fox-image {
+  width: 100%;
+  background-image: url("../assets/image/fox.jpg");
+  background-position: top;
+  background-size: cover;
+  position: relative;
+}
+
+.fox-image:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.text-box1 {
+  font-family: "freight-sans-pro", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24pt;
+  margin-bottom: 1rem;
+  color: white;
+  padding: 300px 0;
+  z-index: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  text-align: center;
+
+  /*align-items: center;*/
+  margin-left: 6%;
+  margin-right: 6%;
+}
+
+.text-box1 p {
+  align-self: center;
+}
+
+.text-box1-link {
+  color: white;
+  text-decoration: none;
+  font-size: 13pt;
+  letter-spacing: 1.5px;
+}
+
+.text-box1-link:hover {
+  color: #009ed0;
+  font-family: "freight-sans-pro", sans-serif;
+  font-size: 14pt;
+}
+
+.text-box1-link .fa-arrow-right {
+  color: #009ed0;
+}
+
+.how-you-can-help {
+  max-width: 1100px;
+  display: flex;
+  margin: 3% auto;
+  background-color: white;
+}
+
+.happy-dog {
+  width: 70%;
+}
+
+#happydog-img {
+  width: 100%;
+}
+
+.text-box2 {
+  width: 30%;
+  font-size: 20pt;
+  line-height: 1.2;
+  font-family: "freight-sans-pro", sans-serif;
+  align-self: center;
+  margin-left: 4%;
+}
+
+.text-box2-link {
+  color: #243e86;
+  text-decoration: none;
+  background-color: #dfc5de;
+  font-size: 14pt;
+}
+
+.text-box2-link:hover {
+  color: #009ed0;
+}
+
+.text-box2-link .fa-arrow-right {
+  color: #009ed0;
+}
+
+.box2-link {
+  margin: 4% 0;
+}
+
+.kitty-and-puppy {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.kitty-and-puppy:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.kitty {
+  width: 50%;
+  padding: 50px 0;
+  background-size: cover;
+  background-image: url(../assets/image/kitty.jpg);
+}
+
+.puppy {
+  width: 50%;
+  padding: 80px 0;
+  background-size: cover;
+  background-image: url(../assets/image/puppyincage.jpg);
+}
+
+.text-box-kitty {
+  font-family: "freight-sans-pro", sans-serif;
+  font-style: normal;
+  font-size: 19pt;
+  line-height: 1.5;
+  color: white;
+  z-index: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  margin-right: 16%;
+  margin-left: 16%;
+  margin-top: 30px;
+}
+
+.text-box-kitty p {
+  margin: 8% 0 8% 0;
+}
+
+.text-box-puppy {
+  font-family: "freight-sans-pro", sans-serif;
+  font-style: normal;
+  font-size: 19pt;
+  line-height: 1.5;
+  color: white;
+  z-index: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-right: 16%;
+  margin-left: 16%;
+  margin-bottom: 30px;
+}
+
+.text-box-puppy p {
+  margin: 8% 0 8% 0;
+}
+
+.kitty-button a {
+  color: white;
+  font-size: 13pt;
+  letter-spacing: 1.5px;
+  font-weight: 550;
+  text-decoration: none;
+  padding: 17px 35px;
+  border-radius: 3px;
+  background-color: #009ed0;
+}
+
+.kitty-button a:hover {
+  background-color: #078ebb;
+}
+
+.puppy-button a {
+  color: white;
+  font-size: 13pt;
+  letter-spacing: 1.5px;
+  font-weight: 550;
+  text-decoration: none;
+  padding: 17px 35px;
+  border-radius: 3px;
+  background-color: #d83c2d;
+}
+
+.puppy-button a:hover {
+  background-color: #c83021;
+}
+
+h3 {
+  color: #d7ae18;
+  font-size: 15pt;
+  letter-spacing: 4px;
+}
+
+/* DEAN ========================================== */
+
+hr {
+  border: 3px solid #bec3c6;
+  width: 52px;
+  margin: 25px auto;
+}
+
+.changes__text {
+  text-align: center;
+  font-size: 35px;
+  color: #243e86;
+  font-weight: 400;
+}
+
+.changes {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.change {
+  flex: 28%;
+  width: 210px;
+  border: 1px solid lightgrey;
+  margin-right: 5vw;
+}
+
+.change:last-child {
+  margin-right: 0;
+}
+
+.change:hover .change__body a {
+  border-bottom: 2px solid #009ed0;
+}
+
+.change:hover #change__btn .fa-arrow-right {
+  color: #009ed0;
+}
+
+.change .change__top,
+.change .change__body,
+.change .change__body__content,
+.change .change__body .change__bottom {
+  width: 100%;
+  height: auto;
+  border: none;
+}
+
+.change .change__top img {
+  width: 100%;
+}
+
+.change .change__body .change__body__content a {
+  text-decoration: none;
+  color: black;
+  line-height: 22px;
+}
+
+.change .change__body {
+  margin: 10px 0;
+  padding: 0 15px;
+  text-align: center;
+  font-weight: 500;
+  line-height: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.change__body .change__body__content {
+  margin: 0;
+  flex: 1;
+  height: 100px;
+}
+
+.change .change__bottom {
+  color: #243e86;
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+}
+
+#change__btn {
+  flex: 1;
+  border: none;
+  margin-top: 20px;
+}
+
+#change__btn .fa-arrow-right {
+  float: right;
+  color: lightgrey;
+  font-size: 20px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+/* GIFT ========================================== */
+
+.gift {
+  width: 100%;
+  background-image: url("../assets/image/bigcat.jpg");
+  background-size: cover;
+  position: relative;
+}
+
+.gift:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.text-wrapper {
+  color: white;
+  width: 50%;
+  margin: 60px auto;
+  position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 150px 30px;
+  z-index: 1;
+}
+
+.gift__title {
+  font-size: 40px;
+  text-align: center;
+}
+
+.gift__link {
+  color: white;
+  text-decoration: none;
+  background: #d83c2d;
+  padding: 18px 35px;
+  font-size: 20px;
+  border-radius: 3px;
+  transition: 0s background-color;
+}
+
+.gift__link:hover {
+  background-color: #c83021;
+  transition-delay: 0.1s;
+}
+
+.gift__btn {
+  margin-top: 30px;
+}
+
+/* ARTICLE ========================================== */
+
+article {
+  margin-bottom: 30px;
+}
+
+.news__container {
+  color: white;
+  text-align: center;
+  position: relative;
+  background: black;
+  padding: 3% 0;
+  clear: both;
+  height: 290px;
+}
+
+.news__container::before {
+  content: "";
+  background-image: url(../assets/image/coyote.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: inline-block;
+  max-width: 30rem;
+  min-width: 24rem;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding-top: 8.9%;
+  width: 35%;
+}
+
+/* .news__container::after {
+  content: "";
+    display: table;
+    clear: both;
+} */
+
+.news__information {
+  float: right;
+  margin-right: 9%;
+  height: 290px;
+}
+
+.news__title {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #009ed0;
+  margin-bottom: 15px;
+}
+
+.news__body {
+  font-size: 25px;
+  max-width: 450px;
+  margin: auto;
+  width: 100%;
+}
+
+.news__btn {
+  margin-top: 30px;
+}
+
+.news__link {
+  color: white;
+  font-size: 20px;
+  background: #009ed0;
+  transition: 0s background-color;
+  text-decoration: none;
+  padding: 15px 65px;
+  border-radius: 3px;
+}
+
+.news__link:hover {
+  background-color: #008ebb;
+  transition-delay: 0.1s;
+}
+
+/* ===FOOTER=== */
+
+/* MEDIA QUERY ======================== */
+@media screen and (max-width: 1200px) {
+  .how-you-can-help {
+    margin: 5%;
+  }
+
+  .container {
+    margin: 0 5%;
+  }
+
+}
+
+@media screen and (max-width: 1050px) {
+  .text-box1 {
+    padding: 150px 0;
+  }
+
+  .text-box1 p {
+    margin: 0 5%;
+  }
+
+  .news__information {
+    margin-right: 5%;
+  }
+
+  .text-wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+}
+
+@media screen and (max-width: 992px) {
+  .text-box1 {
+    padding: 100px 0;
+  }
+
+  .text-box-kitty {
+    margin-top: 0;
+  }
+
+  .text-box-puppy {
+    margin-top: 0;
+  }
+
+  .news__information {
+    margin-right: -40px;
+  }
+
+  .news__body {
+    font-size: 22px;
+    width: 70%;
+  }
+
+  .puppy {
+    background-position: center;
+    background-size: cover;
+  }
+
+  .change .change__top img {
+    max-width: 100%;
+  }
+
+  .change__body .change__body__content {
+    height: 120px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .how-you-can-help {
+    margin-top: 3%;
+  }
+
+  .text-box1 {
+    padding: 80px 0;
+  }
+
+  .how-you-can-help {
+    margin: 45px;
+  }
+
+  .text-box2 {
+    margin: 0 3%;
+  }
+
+  .news__information {
+    margin-right: -50px;
+  }
+
+  .gift:after {
+    height: 100%;
+  }
+
+  .text-wrapper {
+    padding: 100px 20px;
+  }
+
+  .change__body .change__body__content {
+    height: 140px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .text-box1 {
+    padding: 50px 0;
+  }
+
+  .kitty {
+    background-position: center;
+    width: 100%;
+    height: 450px;
+  }
+
+  .puppy {
+    background-position: center;
+    width: 100%;
+    height: 450px;
+  }
+
+  .news__container::before {
+    display: none;
+  }
+
+  .news__container {
+    min-height: 320px;
+  }
+
+  .news__information {
+    width: 100%;
+    margin: auto;
+    padding: 20px 20px 10px 20px;
+  }
+
+  .gift {
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .text-wrapper {
+    width: 100%;
+  }
+
+  .change__body .change__body__content {
+    height: 90px;
+  }
+
+  .change__body .change__body__content:last-child {
+    height: 30px;
+  }
+
+  .change{
+    flex: 40%;
+  } 
+
+  .change:nth-child(2) {
+    margin-right: 0;
+  }
+
+  .change:last-child {
+    margin-top: 5vw;
+  }
+
+  .change__body .change__body__content {
+    height: 100px;
+  }
+
+  .change__body .change__item3 {
+    height: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .how-you-can-help {
+    flex-wrap: wrap;
+  }
+
+  .happy-dog {
+    width: 100%;
+  }
+
+  .text-box2 {
+    width: 100%;
+    margin: 2% 0;
+  }
+
+  .news__body {
+    width: 90%;
+  }
+
+  .change__body .change__body__content {
+    height: 120px;
+  }
+
+  .change__body .change__item3 {
+    height: 30px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .happy-dog {
+    width: 100%;
+  }
+
+  .how-you-can-help {
+    flex-wrap: wrap;
+    margin: 2%;
+  }
+
+  .happy-dog {
+    margin: 3% 5%;
+  }
+
+  .text-box2 {
+    width: 100%;
+    margin: 3% 5%;
+    text-align: center;
+  }
+
+  .kitty {
+    padding: 35px;
+  }
+
+  .text-box-kitty {
+    margin: 7% 3% 0 3%;
+    font-size: 17pt;
+    line-height: 1.2;
+  }
+
+  .text-box-kitty p {
+    padding: 15px 0 35px 0;
+  }
+
+  .text-box-puppy {
+    margin: 0 3%;
+    font-size: 17pt;
+    line-height: 1.2;
+  }
+
+  .text-box-puppy p {
+    padding: 15px 0 35px 0;
+  }
+
+  .gift__title {
+    font-size: 35px;
+  }
+
+  .change {
+    flex: 100%;
+    margin: 0 0 30px 0;
+  }
+
+  .change:last-child {
+    margin: 0;
+  }
+
+  .change .change__top {
+    margin-bottom: 10px;
+  }
+
+  .change__body .change__body__content {
+    height: 80px;
+  }
+
+  .change__body .change__item2 {
+    height: 60px;
+  }
+
+  .change__body .change__item3 {
+    height: 20px;
+  }
+
+}
+
+
 /* MEDIA QUERY */
 @media screen and (max-width: 1400px) {
   .bottom-title {
@@ -382,3 +1126,4 @@ header {
     font-size: 20px;
   }
 }
+
