--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@ form label{
     display:block;
     font-family: var(--freight-font);
     font-weight: 530;
-    font-size: .9rem;
-    
+    font-size: 0.65rem;
     font-style: normal;
 }
 form input { 
@@ -100,7 +99,7 @@ p.warning { 
     padding :0.001%;
     letter-spacing: 0.03rem;
     font-family: var(--freight-font);
-    font-size: .96rem;
+    font-size:.7rem;
     
 }
 /* footer>> leftNAVs*/
@@ -127,28 +126,25 @@ nav.item {
 nav.item-1 li a { 
     padding: 0.00001%;
     font-weight: 999;
-    font-size: 1rem;
+    font-size: 0.7rem;
     text-decoration: none;
     color: var(--blue-text);
 }
 
 nav.item h2 {
-    font-size: 1.2rem;
-    margin: 2% 0%;
+    font-size: 0.7rem;
     font-family: var(--freight-font);
     color: var(--blue-text);
     font-weight: 900;
-    text-align:left;
+    
 }
 
 nav.item li  { 
     padding: 0.00001%;
-    font-size: 1rem;
-    margin: 2% 0%;
     font-weight: 600;
     text-decoration: none;
     color: var(--blue-text);
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-family: var(--freight-font);
 }
 
@@ -157,7 +153,7 @@ nav.item-3 li a , 
 nav.item-4 li a  { 
     padding: 0.00001%;
     font-weight: 100;
-    font-size: 1rem;
+    font-size: 0.7rem;
     text-decoration: none;
     color: var(--blue-text);
     font-family: var(--freight-font);
@@ -170,16 +166,16 @@ nav.item-4 li a  { 
 section.left-bottom-box { 
     padding: 0.001%;
     width: 40%;
-    /*border: 1px dashed blue;*/
+    border: 1px dashed blue;
 }
 
 ul { 
-    padding: 0.001%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /*justify-content: center;*/
+    border: 1px dashed blue;
+    padding: 0.001%;
     width: 100%;
-    /*border: 1px dashed blue;*/
 }
 li { 
     padding: 0.0001%;
@@ -187,117 +183,72 @@ li { 
     list-style: none;
 }
 
-section.left-bottom-box > section.icon-box  > ul > li { 
-    display: flex; 
-    align-items: center;
-    vertical-align:center; 
-    padding: 1% 0%;
-}
-
-section.left-bottom-box > section.icon-box > ul li a { 
-    display: flex; 
-    align-items: center;
-    vertical-align:center; 
-    font-size: 1rem;
-    margin: 5rem 0rem;
-    /*background: black;*/
-    /*padding: 0.001%;*/
-    
-}
-
-
 a.facebook { 
-    content: '' ;
-    background: transparent url('../assets/image/facebook.png' ) no-repeat top left;
-    background-size: 1.75rem;
-    display: inline-block;
-    background-position: center;
-    background-size: cover;
+    content: '';
     width: 1.75rem;
+    background: transparent url('./assets/image/facebook.png' ) no-repeat top left;
     height: 1.75rem;
+    background-size: 1.75rem;
     text-decoration: none;
+    display: inline-block;
 }
-
 
 a.twitter { 
-    content: '' ;
-    background: transparent url('../assets/image/twitter.png' ) no-repeat top left;
-    background-size: 1.75rem;
-    background-position: center;
-    background-size: cover;
+    content: '';
     width: 1.75rem;
+    background: transparent url('./assets/image/twitter.png' ) no-repeat top left;
     height: 1.75rem;
-    text-decoration: none;
     display: inline-block;
+    background-size: 1.75rem;
+    text-decoration: none;
 }
-
 a.instagram { 
-    content: '' ;
-    background: transparent url('../assets/image/instagram.png' ) no-repeat top left;
-    background-size: 1.75rem;
-    background-position: center;
-    background-size: cover;
+    content: '';
     width: 1.75rem;
+    background: transparent url('./assets/image/instagram.png' ) no-repeat top left;
     height: 1.75rem;
-    text-decoration: none;
     display: inline-block;
-}
+    background-size: 1.75rem;
+    text-decoration: none;
+}  
 
 a.youtube { 
-    content: '' ;
-    background: transparent url('../assets/image/youtube.png' ) no-repeat top left;
+    content: '';
+    width: 1.75rem;
+    background: transparent url('./assets/image/youtube.png' ) no-repeat top left;
+    height: 1.75rem;
     background-size: 1.75rem;
     background-position: center;
-    background-size: cover;
-    width: 1.95rem;
-    height: 1.35rem;
-    text-decoration: none;
     display: inline-block;
-    vertical-align:center;
-   
+    vertical-align: middle;
+    text-decoration: none;
 }
+
 
 a.snapchat { 
-    content: '' ;
-    background: transparent url('../assets/image/snapchat.svg' ) no-repeat top left;
-    background-size: 1.75rem;
-    background-position: center;
-    background-size: cover;
+    padding: 0.0001% ;
     width: 1.75rem;
+    background: transparent url('./assets/image/snapchat.svg' ) no-repeat top left;
     height: 1.75rem;
-    text-decoration: none;
     display: inline-block;
-    vertical-align:center;
-   
-}
- section.end-box { 
-        font-size: 1.5em;
-    }
-    
-section.right-bottom-box > section.end-box > p { 
-    margin: .5rem 0;
-    font-family: "freight-sans-pro",sans-serif;
-    font-style: normal;
-    font-size: .45rem;
-    line-height: 1.5;
-    font-weight: 500;
+    background-size: 1.75rem;
+    text-decoration: none;
 }
 
-section.bt-left { 
-    padding: .0001em;
-    /*background: red;*/
-    display: flex;
-    justify-content:flex-end;
-    align-items:center;
+section.right-bottom-box > section.end-box > p { 
+    padding: 1% 1%;
+    font-family: "freight-sans-pro",sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: .55rem;
+    line-height: 1.5;
+    margin: .5rem 0;
 }
- li{ 
-    /*padding: 1em;*/
-    /*background: red;*/
-    display: flex;
-    justify-content:center;
-    align-items:center;
-}
-section.icon-box { 
-    padding: 1em;
-    /*background: purple;*/
+
+/* footer END terms&conditions */   
+section.right-bottom-box { 
+
+    border: 1px dashed black;  
+    display: inline-block;
+    width: 60%;
 }
